<resources>
    <string name="app_name">water</string>
    <string name="login">登入</string>
    <string name="region_choose">地區選擇</string>
    <string name="map_choose">地圖選擇</string>
    <string name="form_history">表單紀錄</string>
    <string name="search_inventory">貨物盤點</string>
    <string name="choose_storage_point">選擇儲櫃位置</string>
    <string name="search_material">搜尋貨物</string>
    <string name="reportTitle">報表名稱</string>
    <string name="enter_number">輸入代號</string>
    <string name="scanner">掃描</string>
    <string name="scanner_barcode">掃描條碼</string>
    <string name="delivery">交貨</string>
    <string name="check">驗收</string>
    <string name="picking">領料</string>
    <string name="transfer">調撥</string>
    <string name="returning">退料</string>
    <string name="inventory">盤點</string>
    <string name="delivery_form">交貨通知單</string>
    <string name="check_form">財務驗收單</string>
    <string name="picking_form">材料領料單</string>
    <string name="transfer_form">材料調撥單</string>
    <string name="returning_form">材料退料單</string>
    <string name="inventory_form">盤點</string>
    <string name="storage_information">儲櫃資訊</string>
    <string name="region">地區</string>
    <string name="map">地圖</string>
    <string name="storage_name">儲櫃名稱</string>
    <string name="storage_num">儲櫃代號</string>
    <string name="storage_content">儲櫃內容</string>
    <string name="good_input">貨物入庫</string>
    <string name="good_output">貨物出庫</string>
    <string name="scan_qr_code">掃描QR CODE</string>
    <string name="permission_error">獲取權限失敗，將導致部分功能無法使用，是否前往授權？</string>
    <string name="wait_input_good">待入庫貨物</string>
    <string name="wait_output_good">待出庫貨物</string>
    <string name="already_choose_good">已選擇貨物</string>
    <string name="quantity">數量</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="send">送出</string>
    <string name="personal_information">個人資料</string>
    <string name="feedback">意見反饋</string>
    <string name="change_password">修改密碼</string>
    <string name="check_delete">確定刪除資料？</string>
    <string name="new_goods">新增貨物</string>
    <string name="goods_information">貨物資訊</string>
    <string name="edit_storage_name">修改儲櫃名稱</string>
    <string name="add_storage_data">新增儲櫃資料</string>
    <string name="goods_number">貨物編號</string>
    <string name="goods_name">貨物名稱</string>
    <string-array name="deal_status">
        <item>待處理</item>
        <item>處理中</item>
        <item>處理完成</item>
    </string-array>
    <string name="wait_deal">待處理</string>
    <string name="now_deal">處理中</string>
    <string name="complete_deal">處理完成</string>
    <string name="setting">設定</string>
    <string name="backup">備份</string>
    <string name="update">更新</string>
    <string name="already_choose">已選擇</string>
    <string name="not_choose">未選擇</string>
    <string-array name="form_array">
        <item>交貨通知單</item>
        <item>財務驗收單</item>
        <item>材料領料單</item>
        <item>材料調撥單</item>
        <item>材料退料單</item>
        <item>盤點</item>
    </string-array>
    <string-array name="region_array">
        <item>1區</item>
        <item>2區</item>
        <item>4區</item>
        <item>6區</item>
        <item>7區</item>
        <item>8區</item>
        <item>9區</item>
        <item>10區</item>
        <item>12區</item>
        <item>屏東區</item>
    </string-array>
    <string-array name="district_one_map_array">
        <item>文山所倉庫</item>
        <item>汐止所倉庫</item>
        <item>貢雙所倉庫</item>
        <item>基隆所倉庫</item>
        <item>淡水所倉庫</item>
        <item>淡水所辦公廳部分倉庫</item>
        <item>暖暖倉庫</item>
        <item>瑞芳所倉庫</item>
        <item>萬金所倉庫</item>
    </string-array>
    <string-array name="district_two_map_array">
        <item>二區物料倉庫</item>
        <item>大湳廠倉庫</item>
        <item>平鎮廠倉庫</item>
        <item>幼平DIP倉庫</item>
        <item>林口所倉庫</item>
        <item>龍潭廠倉庫</item>
        <item>龜山所倉庫</item>
    </string-array>
    <string-array name="district_three_map_array">
        <item>區處</item>
        <item>竹北所</item>
        <item>竹東所</item>
        <item>苗栗所</item>
        <item>通銅所</item>
        <item>湖口所</item>
    </string-array>
    <string-array name="district_four_map_array">
        <item>區處</item>
        <item>大甲所</item>
        <item>大里所</item>
        <item>大雅所</item>
        <item>水里所</item>
        <item>竹山所</item>
        <item>沙鹿所</item>
        <item>東勢所</item>
        <item>南投所</item>
        <item>埔里所</item>
        <item>烏日所</item>
        <item>草屯所</item>
        <item>清水所</item>
        <item>豐原所</item>
        <item>豐原廠</item>
        <item>鯉魚潭</item>
        <item>霧峰所</item>
    </string-array>
    <string-array name="district_five_map_array">
        <item>5區處1號</item>
        <item>5區處2號</item>
        <item>5區處3號</item>
        <item>5區處4號</item>
        <item>5區處斗六所</item>
        <item>5區處斗南所</item>
        <item>5區處北港所</item>
        <item>5區處古坑所</item>
        <item>5區處台西所</item>
        <item>5區處民雄所</item>
        <item>5區處朴子所</item>
        <item>5區處竹崎所</item>
        <item>5區處西螺所</item>
        <item>5區處虎尾所</item>
        <item>5區處雲林給水廠</item>
        <item>5區處新港所</item>
        <item>5區處義竹所</item>
        <item>5區處嘉義所</item>
        <item>5區處嘉義給水廠</item>
    </string-array>
    <string-array name="district_six_map_array">
        <item>二王</item>
        <item>台南所</item>
        <item>台南廠</item>
        <item>永康所</item>
        <item>玉井所</item>
        <item>白河所</item>
        <item>佳里所</item>
        <item>南化廠</item>
        <item>烏山頭</item>
        <item>麻豆所</item>
        <item>新市所</item>
        <item>新營所</item>
        <item>歸仁所</item>
    </string-array>
    <string-array name="district_seven_map_array">
        <item>大崗山</item>
        <item>坪頂廠</item>
        <item>岡山所</item>
        <item>拷潭廠</item>
        <item>高雄服務所</item>
        <item>高雄廠</item>
        <item>楠梓所</item>
        <item>路竹所</item>
        <item>旗山所</item>
        <item>鳳山所</item>
        <item>鳳山廠</item>
        <item>澄清湖廠</item>
        <item>澎湖所</item>
    </string-array>
    <string-array name="district_eight_map_array">
        <item>8區</item>
    </string-array>
    <string-array name="district_nine_map_array">
        <item>玉里所</item>
        <item>吉壽所</item>
        <item>鳳林</item>
    </string-array>
    <string-array name="district_ten_map_array">
        <item>太麻里所</item>
        <item>成功營運所</item>
        <item>池上物料倉庫</item>
    </string-array>
    <string-array name="district_eleven_map_array">
        <item>溪湖所</item>
        <item>鹿港所</item>
        <item>物料課</item>
        <item>北斗營運所</item>
        <item>二水所</item>
        <item>彰化給水廠</item>
        <item>員林營運所</item>
        <item>花壇營運所</item>
        <item>二林營運所</item>
    </string-array>
    <string-array name="district_twelve_map_array">
        <item>12區</item>
    </string-array>
    <string-array name="district_pingtung_map_array">
        <item>屏東區</item>
        <item>大崗山</item>
        <item>屏東所</item>
        <item>東港所</item>
        <item>潮州所</item>
        <item>恆春所</item>
        <item>高樹所</item>
        <item>牡丹給水廠</item>
    </string-array>
    <string-array name="delivery_form_field_name">
        <item>id</item>
        <item>處理狀態</item>
        <item>交貨狀態</item>
        <item>報表代號</item>
        <item>報表名稱</item>
        <item>印表日期</item>
        <item>交貨通知單號</item>
        <item>承售廠商</item>
        <item>訂約單位</item>
        <item>契約字號</item>
        <item>交貨日期</item>
        <item>交貨期限</item>
        <item>展延期限（一）</item>
        <item>展延期限（二）</item>
        <item>展延期限（三）</item>
        <item>收料單位</item>
        <item>交貨地點</item>
        <item>展延文號（一）</item>
        <item>展延文號（二）</item>
        <item>展延文號（三）</item>
        <item>工程編號</item>
        <item>聯絡人</item>
        <item>電話</item>
        <item>申請單號</item>
        <item>合計</item>
    </string-array>
    <string-array name="delivery_form_field_name_eng">
        <item>id</item>
        <item>dealStatus</item>
        <item>deliveryStatus</item>
        <item>reportId</item>
        <item>reportTitle</item>
        <item>date</item>
        <item>formNumber</item>
        <item>underwriter</item>
        <item>ano</item>
        <item>contractNumber</item>
        <item>deliveryDay</item>
        <item>deliveryDate</item>
        <item>extendDate1</item>
        <item>extendDate2</item>
        <item>extendDate3</item>
        <item>receiptDept</item>
        <item>deliverylocation</item>
        <item>extendNo1</item>
        <item>extendNo2</item>
        <item>extendNo3</item>
        <item>projectNumber</item>
        <item>contact</item>
        <item>contactPhone</item>
        <item>applyNo</item>
        <item>sumAddition</item>
    </string-array>
    <string-array name="delivery_Item_field_name">
        <item>序號</item>
        <item>標項</item>
        <item>批次</item>
        <item>契約項次</item>
        <item>材料編號</item>
        <item>材料名稱</item>
        <item>規格</item>
        <item>單位</item>
        <item>長度</item>
        <item>發出數量</item>
        <item>實收數量</item>
        <item>單價</item>
        <item>複價</item>
    </string-array>
    <string-array name="delivery_item_field_name_eng">
        <item>number</item>
        <item>itemNo</item>
        <item>batch</item>
        <item>no</item>
        <item>materialNumber</item>
        <item>materialName</item>
        <item>materialSpec</item>
        <item>materialUnit</item>
        <item>length</item>
        <item>deliveryQuantity</item>
        <item>receivedQuantity</item>
        <item>price</item>
        <item>itemCost</item>
    </string-array>
    <string-array name="picking_form_field_name">
        <item>id</item>
        <item>處理狀態</item>
        <item>報表代號</item>
        <item>報表名稱</item>
        <item>印表日期</item>
        <item>發料單位</item>
        <item>領料日期</item>
        <item>領料單位</item>
        <item>領料單號</item>
        <item>原憑証字號</item>
        <item>成本分攤單位</item>
        <item>會計科目</item>
        <item>系統代號</item>
        <item>用途代號</item>
        <item>工程編號</item>
        <item>工程名稱</item>
        <item>案號</item>
    </string-array>
    <string-array name="picking_form_field_name_eng">
        <item>id</item>
        <item>dealStatus</item>
        <item>reportId</item>
        <item>reportTitle</item>
        <item>date</item>
        <item>issuingUnit</item>
        <item>pickingDate</item>
        <item>pickingDept</item>
        <item>formNumber</item>
        <item>originalVoucherNumber</item>
        <item>costAllocationUnit</item>
        <item>accountingSubject</item>
        <item>systemCode</item>
        <item>usageCode</item>
        <item>projectNumber</item>
        <item>projectName</item>
        <item>caseNumber</item>
    </string-array>
    <string-array name="picking_item_field_name">
        <item>序號</item>
        <item>材料編號</item>
        <item>材料名稱</item>
        <item>規格</item>
        <item>單位</item>
        <item>請領數量</item>
        <item>實領數量</item>
        <item>單價</item>
        <item>複價</item>
    </string-array>
    <string-array name="picking_item_field_name_eng">
        <item>number</item>
        <item>materialNumber</item>
        <item>materialName</item>
        <item>materialSpec</item>
        <item>materialUnit</item>
        <item>requestedQuantity</item>
        <item>actualQuantity</item>
        <item>price</item>
        <item>itemCost</item>
    </string-array>
    <string-array name="transfer_form_field_name">
        <item>id</item>
        <item>處理狀態</item>
        <item>報表代號</item>
        <item>報表名稱</item>
        <item>印表日期</item>
        <item>撥方調撥單號</item>
        <item>收方調撥單號</item>
        <item>收方請撥單號</item>
        <item>撥方單位</item>
        <item>原憑證字號</item>
        <item>需用日期</item>
        <item>撥方調撥日期</item>
        <item>收方撥入日期</item>
        <item>收方撥入日期</item>
        <item>收方單位</item>
        <item>收料地點</item>
        <item>聯絡人</item>
        <item>電話</item>
        <item>調撥或用途說明</item>
    </string-array>
</resources>