<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGoods"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="84dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/textMaterialName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/goods_name"
                android:textAppearance="@style/TextAppearance.Astec.HeadLine5"
                android:textColor="@color/seed"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/textMaterialNumber"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/goods_number"
                android:background="@color/transparent"
                android:textAppearance="@style/TextAppearance.Astec.Body2"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/textMaterialName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />


            <TextView
                android:id="@+id/textRegion"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/region"
                android:textAppearance="@style/TextAppearance.Astec.HeadLine5"
                android:textColor="@color/seed"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textMaterialName" />
            <TextView
                android:id="@+id/textMap"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/map"
                android:background="@color/transparent"
                android:textAppearance="@style/TextAppearance.Astec.Body2"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/textRegion"
                app:layout_constraintLeft_toRightOf="@+id/textMaterialName" />
            <TextView
                android:id="@+id/textStorage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.33"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/storage_name"
                android:background="@color/transparent"
                android:textAppearance="@style/TextAppearance.Astec.Body2"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/textMap"
                app:layout_constraintLeft_toRightOf="@+id/textMaterialName" />

            <TextView
                android:id="@+id/textQuantity"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.2"
                android:text="數量"
                android:background="@color/transparent"
                android:textAppearance="@style/TextAppearance.Astec.Body2"
                android:textColor="@color/seed"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textRegion" />

            <ImageView
                android:id="@+id/imageRemove"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintWidth_percent="0.2"
                android:text="數量"
                android:background="@color/transparent"
                android:src="@drawable/remove_circle"
                app:tint="@color/red"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textQuantity"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>